app/assets/stylesheets/application.css.scss
 @import "bootstrap-sprockets";
 @import "bootstrap";

 body {
   padding-top: 50px;
 }

 .img-footer {
   max-width: 2em;
   max-height: 2em;
   margin-right: .5em;
 }

 footer {
   padding: 1em 0;
   padding-top: 1em;
   padding-right: 0px;
   padding-bottom: 1em;
   padding-left: 0px;
   margin-top: 1em;
   border-top: 1px solid #ccc;
   border-top-width: 1px;
   border-top-style: solid;
   border-top-color: rgb(204, 204, 204);
 }


.question {
  margin: .5rem 0;
}

